# ros

./: ODR-M_PC-A_ODR-MB.txt  ODR-M_PC-A_PC-MB.txt  ODR_MASTER_ODR_AMCL_ODR_MOVEBASE.txt  ODR_MASTER_ODR_AMCL_PC_MOVEBASE.txt  ODR_MASTER_PC_AMCL_ODR_MOVEBASE.txt  ODR_MASTER_PC_AMCL_PC_MOVEBASE.txt  PC_MASTER_ODR_AMCL_ODR_MOVEBASE.txt  PC_MASTER_ODR_AMCL_PC_MOVEBASE.txt  PC_MASTER_PC_AMCL_ODR_MOVEBASE.txt  PC_MASTER_PC_AMCL_PC_MOVEBASE.txt  Results.xlsx  avgCpuUsage.sh  best_map_ever_fixed.pgm  best_map_ever_fixed.yaml  improved_map.pgm  improved_map.yaml  last_use.txt  my_map.pgm  my_map.yaml  odr_pc_laptime_taskone.txt  odr_task_two_new.txt  pc_avg_cpu_task_two.txt  pc_avg_cpu_task_two_1.txt  pc_avg_cpu_task_two_2.txt  pc_avg_cpu_task_two_3.txt  pc_task_one.txt  task_four_all_cores.txt  task_one_all_cores.txt  task_three_all_cores.txt  task_two_all_cores.txt  task_two_cpu_usage_odr_1.txt  task_two_cpu_usage_odr_2.txt  task_two_cpu_usage_odr_3.txt  task_two_pc.txt
devel/: setup.sh
devel/include/beginner_tutorials/: AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
devel/include/detection_msgs/: Detection.h
devel/include/recognition_msgs/: Recognition.h
devel/lib/beginner_tutorials/: add_two_ints_client  add_two_ints_server  listener  talker
devel/lib/detection_msgs/: overlay_visualizer  patch_visualizer
devel/lib/dlib_detector/: object_detector  object_detector_trainer  traffic_sign_listener
devel/lib/evaluation_tasks/: cliff_listener
devel/lib/exercise3/: map_goals
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/dlib_detector/: CMakeLists.txt
src/evaluation_tasks/: CMakeLists.txt  CMakeLists.txt~  Time.txt  package.xml  task_one_odr.txt  task_one_pc.txt
src/evaluation_tasks/launch/: amcl.launch  minimal3d.launch  movebase.launch  new_goals.launch  new_goals.launch~  task_one.launch  task_two.launch  task_two.launch~
src/evaluation_tasks/src/: TaskTwo_odroid.txt  TaskTwo_pc.txt
src/evaluation_tasks/src/task_one/: cliff_listener.cpp  cliff_listener.cpp.save
src/evaluation_tasks/src/task_two/: new_goals.cpp  new_goals.cpp~
src/exercise6/: CMakeLists.txt  ODRCcylinderTime.txt  ODRCplaneTime.txt  ODRPCcylinderTime.txt  ODRPCplaneTime.txt  PCODRcylinderTime.txt  PCODRplaneTime.txt  PCPCcylinderTime.txt  PCPCplaneTime.txt  PC_findCylinderTime_ODR-PC.txt  PC_findCylinderTime_PC-ODR.txt  PC_findCylinderTime_PC-PC.txt  PC_findPlaneTime_ODR-PC.txt  PC_findPlaneTime_PC-ODR.txt  PC_findPlaneTime_PC-PC.txt  findCylinderTime_ODR-PC.txt  findCylinderTime_PC-ODR.txt  findPlaneTime_ODR-PC.txt  findPlaneTime_PC-ODR.txt
src/localizer/src/: mapper
src/opencv_detector/: CMakeLists.txt  detectionTime.txt  package.xml  recognitionTime.txt
src/opencv_detector/data/: create_csv.py  face_data.csv
src/opencv_detector/launch/: detect.launch  face_subscriber.launch  facedetector.launch  facedetector_camera.launch  facedetector_mapper.launch  facerecognition.launch  recognize.launch
src/opencv_detector/src/: TimeHarry_odroid.txt  TimeTine_odroid.txt  detector  face_detector.cpp  face_recognizer.cpp  face_subscriber.cpp  recognitionCallbackTime.txt  recognizer.cpp
src/recognition_msgs/: CMakeLists.txt
src/recognition_msgs/msg/: Recognition.msg
(+55 files in other folders)
